src/test/ui/const-ptr/ptr_to_usize_cast.stderr
error: any use of this value will cause an error
  --> $DIR/ptr_to_usize_cast.rs:6:36
   |
LL |     const _ERROR: usize = unsafe { &0 as *const i32 as usize };
   |     -------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                    |
   |                                    cannot cast pointer to integer because it was not created by cast from integer
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to previous error

